--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Hi, Josh. This is the code that connects your html with your css! -->
   <link rel="stylesheet" href="./style.css">
+  <!-- This will give your document a title in the browser! -->
   <title>Ian Malcolm</title>
 </head>
 
